# task1

./: .env  .gitignore  Cargo.toml  README.md  flake.nix  task1.txt  task2.txt  task3.txt
src/: main.rs
