[package]
name = "testing"
version = "0.1.0"
edition = "2024"
authors = ["Lefterache Ștefan <lefterache.stefan.8@gmail.com>"]

[dependencies]
actix-web = "4.13.0"
dotenvy = "0.15.7"
env_logger = "0.11.10"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sqlx = { version = "0.8.6", features = ["runtime-tokio-native-tls", "postgres", "runtime-tokio-rustls"] }
tokio = { version = "1.50.0", features = ["full"] }

[profile.release]
lto = true
codegen-units = 1
